# proyecto

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
airline_app/: admin.py  forms.py  models.py  urls.py  views.py
airline_app/migrations/: 0001_initial.py  0002_delete_resourceconstraint.py  0003_resourceconstraint.py
airline_app/static/airline_app/css/: main.css
airline_app/static/airline_app/js/: main.js
airline_app/templates/airline_app/: aircraft_confirm_delete.html  aircraft_detail.html  aircraft_form.html  aircraft_list.html  base.html  check_availability.html  constraint_confirm_delete.html  constraint_detail.html  constraint_form.html  constraint_list.html  find_slot.html  flight_confirm_delete.html  flight_detail.html  flight_form.html  flight_list.html  gate_confirm_delete.html  gate_detail.html  gate_form.html  gate_list.html  home.html  personnel_confirm_delete.html  personnel_detail.html  personnel_form.html  personnel_list.html  runway_confirm_delete.html  runway_detail.html  runway_form.html  runway_list.html
airline_app/tests/: conftest.py  test_flight_model.py  test_flight_views.py
config/: settings.py  urls.py
staticfiles/airline_app/css/: main.css
staticfiles/airline_app/js/: main.js
