[project]
name = "proyecto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asgiref==3.10.0",
    "black==25.9.0",
    "click==8.3.0",
    "colorama==0.4.6",
    "cssbeautifier==1.15.4",
    "dj-database-url==3.1.0",
    "django==5.2.7",
    "django-mathfilters==1.0.0",
    "djlint==1.36.4",
    "editorconfig==0.17.1",
    "jsbeautifier==1.15.4",
    "json5==0.12.1",
    "mypy-extensions==1.1.0",
    "packaging==25.0",
    "pathspec==0.12.1",
    "platformdirs==4.5.0",
    "pytokens==0.2.0",
    "pyyaml==6.0.3",
    "regex==2025.9.18",
    "six==1.17.0",
    "sqlparse==0.5.3",
    "tqdm==4.67.1",
    "ty==0.0.12",
    "tzdata==2025.2",
]
